# Chess

./: .gitignore  CMakeLists.txt  main.cpp
Chess/: Chess.cpp  Chess.h  Chess.ui  ui_Chess.h
ChessWindow1/: ChessWindow1.cpp  ChessWindow1.h  ChessWindow1.ui  ui_ChessWindow1.h
ChessWindow2/: ChessWindow2.cpp  ChessWindow2.h  ChessWindow2.ui  ui_ChessWindow2.h
Chessman/: Chessman.cpp  Chessman.h
Client/: ChessClient.cpp  ChessClient.h
Main/: mainWindow.cpp  mainWindow.h  mainWindow.ui  ui_mainWindow.h
Menu/: Menu.cpp  Menu.h  Menu.ui  ui_Menu.h
Server/: ChessServer.cpp  ChessServer.h
User/: User.h
